2006-01-29 Max Horváth <max.horvath@maxspot.de>
	* WiFiDog now detects APC PHP cache and eAccelerator PHP cache and disables
	  both PHP caches, because WiFiDog currently doesn't run with either of
	  those PHP caches (I'm still investigating why)
	* added a missing <ul> HTML tag on the administration page
	* the validation mail sent to new users now includes the full path to the
	  WiFiDog installation (before it assumed WiFiDog to be installed in
	  the document root of the webserver)
	* fixed display of start button of portal when WiFiDog is not installed
	  in the document root of the webserver
	* replaced $_SERVER["DOCUMENT_ROOT"]-stuff with our defines made in
	  path_defines_base.php
	* updated HTMLeditor content class to use the new, moved stylesheet.css
	* fixed error messages not displaying technical support e-mail address

2006-01-25 Max Horváth <max.horvath@maxspot.de>
	* a notice message regarding timezones was being displayed when running PHP
	  5.1.0+ due to rewritten date functions of PHP. There is a new config flag
	  in config.php named DATE_TIMEZONE. Set it to your local timezone.
	  Don't forget to update your local.config.php in case you're using it.

2006-01-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* Dependencies.php:  We missed one more instance of non-unifrom code for path detection.
	The Dependencies class now uses the code in include/path_defines_base.php like the rest of the system.
	Also make it return more usefull error messages.
	* SmartyWifidog.php:  Output the error returned by Dependencies if Smarty cannot be found for some reason.

2006-01-23 Max Horváth <max.horvath@maxspot.de>
	* Removed compiled PHPdoc documentation
	* moved createDoc.sh to "doc" directory, documentation can be generated on
	  the fly now, in the future we'll be generating a nightly PHPdoc on
	  wifidog.org
	* renamed "ChangeLog" to CHANGELOG, resulting this file being parsed by PHPdoc
	* moved "header.gif" image to its own folder in the images directory